--- a/Party.ipynb
+++ b/Party.ipynb
@@ -81,7 +81,7 @@
     "def Plot_state(save):\n",
     "    '''\n",
     "    Plot current state of system at iteration it.\n",
-    "    I recommend the creation of a folder named Figures for saving the plots.\n",
+    "    I recommend the creation of a folder named figures for saving the plots.\n",
     "    If save=True then save fig in file, else just plot it.\n",
     "    '''\n",
     "    plt.title(r\"$t=$\"+str(it*dt))\n",
@@ -92,7 +92,7 @@
     "        if v[i]==1:\n",
     "            plt.scatter(r[i][0],r[i][1],alpha=1.0,color=\"skyblue\") #Not moving agents\n",
     "    if(save):\n",
-    "        plt.savefig(\"Figures/snapshot_t_\"+str(it)+\".png\",dpi=300)\n",
+    "        plt.savefig(\"figures/snapshot_t_\"+str(it)+\".png\",dpi=300)\n",
     "    else:\n",
     "        plt.show()\n",
     "    plt.close()\n",
