--- a/Party.ipynb
+++ b/Party.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Things to do\n",
-    "1. Write code  \n",
+    "1. Write code\n",
     "2. Read bibliography (Parties, surface adhesion,...?)  \n",
     "3. Vary parameters and make plots \n",
     "    -The first thing is to fix dt,L and D. Once they are selected they should not change!\n",
@@ -15,17 +15,17 @@
     "Model for dynamical cluster formation in social events. This can also be seen as a preliminary work to study the formation of contact matrices. The dynamics for the individuals should satisfy:\n",
     "- Be simple.\n",
     "- Individual modeling with partial perception (collective behavior must emerge in a natural way).\n",
-    "- A Dynamical phase should emerge and be robust. No formation of giant component.\n",
-    "- The theory is neutral (there is no differences among the individuals).\n",
+    "- A Pseudo-stationary phase should emerge and be robust. No formation of giant component. No well-mixed state.\n",
+    "- The theory is neutral (there is no differences among the individuals). Even if there are different communities with fitness among individuals, every one should follow the same rules.\n",
     "\n",
     "\n",
     "# Things to discuss\n",
-    "Javi-About the model: I would stick with the easiest brownian motion as the mobility model for the agents. Despite it is not realistic (the movement of a person resembles more a persistent model such as the run and tumble model and there should be distant-dependent iterations), I think that is useful not to enter in these particular details. I don't think that our conclusions will depend on this particularities and moreover they could distract the reader. "
+    "Javi-About the model: I would stick with the easiest brownian motion as the mobility model for the agents. Despite it is not realistic (the movement of a person resembles more a persistent model such as the run and tumble model and there should be distant-dependent interactions), I think that is useful not to enter in these particular details. I don't think that our conclusions will depend on this particularities and moreover they could distract the reader. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,20 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Parameters\n",
-    "L=10 #Size of box LxL\n",
-    "N=20 #Number of agents\n",
-    "D=0.1 #Diffusion constant (FIX VALUE)\n",
+    "L=3 #Size of box LxL\n",
+    "N=50 #Number of agents\n",
+    "D=0.2 #Diffusion constant (FIX VALUE)\n",
     "dt=0.01 #Time increment\n",
     "sh=np.sqrt(D*dt)\n",
     "tmax=5.0 #Run simulation until time tmax\n",
     "itmax=int(round(tmax/dt))\n",
-    "r0=0.2 #If |r_i-r_j|<r0 then agents i and j forms a \"social link\" and stop moving\n",
-    "w=2.0 #1/w is the typical time scale for going to the bathroom  \n",
+    "r0=0.1 #If |r_i-r_j|<r0 then agents i and j forms a \"social link\" and stop moving\n",
+    "w=0.5 #1/w is the typical time scale for going to the bathroom  \n",
     "pb=1.0-np.exp(-dt*w)\n",
     "r=np.array([np.random.uniform(low=0,high=L,size=2) for i in range(N)]) #r[i]=(x_i,y_i)=position vector of agent i\n",
     "v=np.zeros(N,dtype=int) #If v[i]=0, then agent i is moving and do not have a social link, if v[i]=1 then agent i\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -133,30 +133,34 @@
     "            if np.random.uniform()<=pb: #Bathroom urgency\n",
     "                v[i]=0\n",
     "                r[i]=np.random.uniform(low=0,high=L,size=2) #Teleportation\n",
-    "                #Are there isolated nodes?\n",
-    "                for j in range(N):\n",
-    "                    if v[j]==1:\n",
-    "                        for k in range(N):\n",
-    "                            Isolated=True\n",
-    "                            if ((j!=k) and (np.linalg.norm(r[j]-r[k]) <=r0)):\n",
-    "                                Isolated=False\n",
-    "                                break\n",
-    "                            if (Isolated):\n",
-    "                                v[j]=0\n",
+    "                \n",
+    "def Identify_isolated(v):\n",
+    "    '''\n",
+    "    Identify Isolated nodes that were deactivated in a social link and need to be activated\n",
+    "    '''\n",
+    "    for j in range(N):\n",
+    "        if v[j]==1:\n",
+    "            for k in range(N):\n",
+    "                Isolated=True\n",
+    "                if ((j!=k) and (np.linalg.norm(r[j]-r[k]) <=r0)):\n",
+    "                    Isolated=False\n",
+    "                    break\n",
+    "                if (Isolated):\n",
+    "                    v[j]=0\n",
     "\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time spend in runing main (mins)= 1.8729427258173625\n"
+      "Time spend in runing main (mins)= 3.9253690520922344\n"
      ]
     }
    ],
@@ -168,12 +172,21 @@
     "    move(r) #r(t)->r(t+dt)\n",
     "    RBC(r) # Reflecting boundary conditions\n",
     "    destroylink(v) #Destroy social links\n",
+    "    Identify_isolated(v) #Identify isolated nodes that need to be activated\n",
     "    createlink(v) #Create social links\n",
+    "    \n",
     "    Plot_state(save=True) #This is the most expensive part of the code (3.35 mins for 999 frames)\n",
     "\n",
     "end = time.time()\n",
     "print(\"Time spend in runing main (mins)=\",(end - start)/60)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
