--- a/Party.ipynb
+++ b/Party.ipynb
@@ -55,12 +55,12 @@
     "#Parameters\n",
     "L=3 #Size of box LxL\n",
     "N=50 #Number of agents\n",
-    "D=0.2 #Diffusion constant (FIX VALUE)\n",
+    "D=0.2 #Diffusion constant (FIXED VALUE?)\n",
     "dt=0.01 #Time increment\n",
     "sh=np.sqrt(D*dt)\n",
     "tmax=5.0 #Run simulation until time tmax\n",
     "itmax=int(round(tmax/dt))\n",
-    "r0=0.1 #If |r_i-r_j|<r0 then agents i and j forms a \"social link\" and stop moving\n",
+    "r0=0.1 #If |r_i-r_j|<r0 then agents i and j form a \"social link\" and stop moving\n",
     "w=0.5 #1/w is the typical time scale for going to the bathroom  \n",
     "pb=1.0-np.exp(-dt*w)\n",
     "r=np.array([np.random.uniform(low=0,high=L,size=2) for i in range(N)]) #r[i]=(x_i,y_i)=position vector of agent i\n",
